test/extended/util/compat_otp/testdata/securityandcompliance/wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: wordpress
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/instance: wordpress
  name: wordpress
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: wordpress
    weight: 100
  wildcardPolicy: None
